--- a/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Shared/ScienceAndMaths.Shared.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Shared/ScienceAndMaths.Shared.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B14FF188-99E1-48F2-90EC-8745E42412A4}</ProjectGuid>
+    <ProjectGuid>{32271CAC-A2CE-4F84-8065-C356E66E2895}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ScienceAndMaths.Hydraulics</RootNamespace>
-    <AssemblyName>ScienceAndMaths.Hydraulics</AssemblyName>
+    <RootNamespace>ScienceAndMaths.Shared</RootNamespace>
+    <AssemblyName>ScienceAndMaths.Shared</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,16 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Canal.cs" />
-    <Compile Include="CanalSection.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RectangularSection.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\ScienceAndMaths.Shared\ScienceAndMaths.Shared.csproj">
-      <Project>{32271CAC-A2CE-4F84-8065-C356E66E2895}</Project>
-      <Name>ScienceAndMaths.Shared</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
