--- a/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Hydraulics/ScienceAndMaths.Hydraulics.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Hydraulics/ScienceAndMaths.Hydraulics.csproj
@@ -40,10 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Canal.cs" />
-    <Compile Include="CanalSection.cs" />
+    <Compile Include="Canals\Canal.cs" />
+    <Compile Include="Canals\CanalSection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RectangularSection.cs" />
+    <Compile Include="Canals\RectangularSection.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ScienceAndMaths.Shared\ScienceAndMaths.Shared.csproj">
@@ -51,5 +51,6 @@
       <Name>ScienceAndMaths.Shared</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
