--- a/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Configuration/ScienceAndMaths.Configuration.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Configuration/ScienceAndMaths.Configuration.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,8 +42,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CanalConfiguration.cs" />
+    <Compile Include="Canals\CanalArrow.cs" />
+    <Compile Include="Canals\CanalConfiguration.cs" />
+    <Compile Include="Canals\CanalNode.cs" />
+    <Compile Include="Canals\RectangularSection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ScienceAndMaths.Shared\ScienceAndMaths.Shared.csproj">
+      <Project>{32271CAC-A2CE-4F84-8065-C356E66E2895}</Project>
+      <Name>ScienceAndMaths.Shared</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
