--- a/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Application/ScienceAndMaths.Application.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Application/ScienceAndMaths.Application.csproj
@@ -44,5 +44,11 @@
     <Compile Include="CanalFlowService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ScienceAndMaths.Domain\ScienceAndMaths.Domain.csproj">
+      <Project>{9DF6D77C-6ED1-4B3A-8639-4BFDEA83A579}</Project>
+      <Name>ScienceAndMaths.Domain</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
