--- a/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Shared/ScienceAndMaths.Shared.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Shared/ScienceAndMaths.Shared.csproj
@@ -41,7 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="ICanalSection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XmlConsts.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
