Unit tests for serialization and configuration

--- a/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Configuration/ScienceAndMaths.Configuration.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Configuration/ScienceAndMaths.Configuration.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Canals\CanalConfiguration.cs" />
     <Compile Include="Canals\CanalNode.cs" />
     <Compile Include="Canals\RectangularSection.cs" />
+    <Compile Include="Canals\TrapezoidalSection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
