--- a/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Shared/ScienceAndMaths.Shared.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Shared/ScienceAndMaths.Shared.csproj
@@ -40,10 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Canals\CanalSimulationResult.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="ICanalSection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XmlConsts.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
