--- a/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Configuration/ScienceAndMaths.Configuration.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Configuration/ScienceAndMaths.Configuration.csproj
@@ -33,20 +33,24 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Canals\CanalArrow.cs" />
+    <Compile Include="Canals\CanalConfiguration.cs" />
     <Compile Include="Canals\CanalConfigurationLoader.cs" />
+    <Compile Include="Canals\CanalNode.cs" />
+    <Compile Include="Canals\RectangularSection.cs" />
+    <Compile Include="Canals\TrapezoidalSection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ScienceAndMaths.Data\ScienceAndMaths.Data.csproj">
-      <Project>{372D6698-C64E-417D-83D5-954D61EFAFDF}</Project>
-      <Name>ScienceAndMaths.Data</Name>
-    </ProjectReference>
     <ProjectReference Include="..\ScienceAndMaths.Domain\ScienceAndMaths.Domain.csproj">
       <Project>{9DF6D77C-6ED1-4B3A-8639-4BFDEA83A579}</Project>
       <Name>ScienceAndMaths.Domain</Name>
