--- a/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Domain/ScienceAndMaths.Domain.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Domain/ScienceAndMaths.Domain.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="ICanalConfigurationLoader.cs" />
     <Compile Include="ICanalFlowService.cs" />
+    <Compile Include="ICanalManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
