--- a/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Application/ScienceAndMaths.Application.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Application/ScienceAndMaths.Application.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CanalFlowService.cs" />
+    <Compile Include="CanalManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
