--- a/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Server/ScienceAndMaths.Server.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Server/ScienceAndMaths.Server.csproj
@@ -8,9 +8,10 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>Rob.Engineering.ScienceAndMaths.Server</RootNamespace>
     <AssemblyName>Rob.Engineering.ScienceAndMaths.Server</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
