--- a/products/ScienceAnsMaths.WindowsServices/Test.U/ScienceAndMaths.Mathematics.Test/ScienceAndMaths.Mathematics.Test.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/Test.U/ScienceAndMaths.Mathematics.Test/ScienceAndMaths.Mathematics.Test.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FiniteElementMethodTest.cs" />
     <Compile Include="MatrixOperationsTest.cs" />
     <Compile Include="RungeKuttaTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
