--- a/products/ScienceAnsMaths.WindowsServices/Test.U/ScienceAndMaths.Mathematics.Test/ScienceAndMaths.Mathematics.Test.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/Test.U/ScienceAndMaths.Mathematics.Test/ScienceAndMaths.Mathematics.Test.csproj
@@ -63,6 +63,10 @@
       <Project>{fe52cf6d-a8e0-4b30-9fb9-926c71639bc2}</Project>
       <Name>ScienceAndMaths.Mathematics</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\ScienceAndMaths.Shared\ScienceAndMaths.Shared.csproj">
+      <Project>{32271CAC-A2CE-4F84-8065-C356E66E2895}</Project>
+      <Name>ScienceAndMaths.Shared</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
