--- a/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Shared/ScienceAndMaths.Shared.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Shared/ScienceAndMaths.Shared.csproj
@@ -47,6 +47,7 @@
     <Compile Include="INode.cs" />
     <Compile Include="IInterpolationElement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServerConfigConsts.cs" />
     <Compile Include="XmlConsts.cs" />
   </ItemGroup>
   <ItemGroup />
