--- a/products/ScienceAnsMaths.WindowsServices/Test.U/ScienceAndMaths.Configuration.Test/ScienceAndMaths.Configuration.Test.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/Test.U/ScienceAndMaths.Configuration.Test/ScienceAndMaths.Configuration.Test.csproj
@@ -47,10 +47,12 @@
       <HintPath>..\..\packages\MSTest.TestFramework.1.3.2\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CanalConfigurationLoaderTest.cs" />
     <Compile Include="CanalConfigurationTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -61,6 +63,14 @@
     <ProjectReference Include="..\..\ScienceAndMaths.Configuration\ScienceAndMaths.Configuration.csproj">
       <Project>{C3210660-EB04-4688-933D-A19A0DC18C1B}</Project>
       <Name>ScienceAndMaths.Configuration</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\ScienceAndMaths.Core\ScienceAndMaths.Core.csproj">
+      <Project>{233E869A-0F43-4E77-8DB7-3773EC7C83CE}</Project>
+      <Name>ScienceAndMaths.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\ScienceAndMaths.Domain\ScienceAndMaths.Domain.csproj">
+      <Project>{9DF6D77C-6ED1-4B3A-8639-4BFDEA83A579}</Project>
+      <Name>ScienceAndMaths.Domain</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\ScienceAndMaths.Hydraulics\ScienceAndMaths.Hydraulics.csproj">
       <Project>{B14FF188-99E1-48F2-90EC-8745E42412A4}</Project>
