--- a/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/ScienceAndMaths.Client.Modules.csproj
+++ b/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/ScienceAndMaths.Client.Modules.csproj
@@ -79,14 +79,14 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Picking\PickingModule.cs" />
-    <Compile Include="Picking\Ribbon\PickingRibbon.xaml.cs">
-      <DependentUpon>PickingRibbon.xaml</DependentUpon>
+    <Compile Include="Picking\CanalModule.cs" />
+    <Compile Include="Picking\Ribbon\CanalRibbon.xaml.cs">
+      <DependentUpon>CanalRibbon.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Picking\ViewModels\IPickingViewModel.cs" />
-    <Compile Include="Picking\ViewModels\PickingViewModel.cs" />
-    <Compile Include="Picking\Views\PickingView.xaml.cs">
-      <DependentUpon>PickingView.xaml</DependentUpon>
+    <Compile Include="Picking\ViewModels\ICanalViewModel.cs" />
+    <Compile Include="Picking\ViewModels\CanalViewModel.cs" />
+    <Compile Include="Picking\Views\CanalView.xaml.cs">
+      <DependentUpon>CanalView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Picking\Views\LocationView.xaml.cs">
       <DependentUpon>LocationView.xaml</DependentUpon>
@@ -122,11 +122,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Picking\Ribbon\PickingRibbon.xaml">
+    <Page Include="Picking\Ribbon\CanalRibbon.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Picking\Views\PickingView.xaml">
+    <Page Include="Picking\Views\CanalView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
