Ribbon Navigation implemented

--- a/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Core/ScienceAndMaths.Client.Core.csproj
+++ b/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Core/ScienceAndMaths.Client.Core.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helpers\ModuleExtensionMethods.cs" />
+    <Compile Include="Helpers\RegionManagerExtensionMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
