Improvements in navigation for ribbons, pages, view models and new button for loading canals

--- a/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Shared/ScienceAndMaths.Client.Shared.csproj
+++ b/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Shared/ScienceAndMaths.Client.Shared.csproj
@@ -75,6 +75,7 @@
     <Compile Include="ScienceAndMathsModule.cs" />
     <Compile Include="ScienceAndMathsModuleInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScienceAndMathsViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -125,6 +126,11 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\canal_icon.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\load_icon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
