--- a/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Domain/ScienceAndMaths.Domain.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Domain/ScienceAndMaths.Domain.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ICanalConfigurationLoader.cs" />
     <Compile Include="ICanalFlowService.cs" />
     <Compile Include="ICanalManager.cs" />
+    <Compile Include="IConfigurationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
