--- a/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Application/ScienceAndMaths.Application.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Application/ScienceAndMaths.Application.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CanalFlowService.cs" />
+    <Compile Include="ConfigurationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
