--- a/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.ServiceAgents/ScienceAndMaths.ServiceAgents.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.ServiceAgents/ScienceAndMaths.ServiceAgents.csproj
@@ -54,13 +54,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CanalDirectServiceAgent.cs" />
+    <Compile Include="DirectConfigurationServiceAgent.cs" />
     <Compile Include="ICanalServiceAgent.cs" />
+    <Compile Include="IConfigurationServiceAgent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ScienceAndMaths.Domain\ScienceAndMaths.Domain.csproj">
       <Project>{9DF6D77C-6ED1-4B3A-8639-4BFDEA83A579}</Project>
       <Name>ScienceAndMaths.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ScienceAndMaths.Hydraulics\ScienceAndMaths.Hydraulics.csproj">
+      <Project>{B14FF188-99E1-48F2-90EC-8745E42412A4}</Project>
+      <Name>ScienceAndMaths.Hydraulics</Name>
     </ProjectReference>
     <ProjectReference Include="..\ScienceAndMaths.Shared\ScienceAndMaths.Shared.csproj">
       <Project>{32271CAC-A2CE-4F84-8065-C356E66E2895}</Project>
