--- a/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Desktop/ScienceAndMaths.Client.Desktop.csproj
+++ b/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Desktop/ScienceAndMaths.Client.Desktop.csproj
@@ -82,11 +82,11 @@
     </Reference>
     <Reference Include="UIAutomationProvider" />
     <Reference Include="UIAutomationTypes" />
-    <Reference Include="Unity.Abstractions, Version=5.11.1.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.Abstractions.5.11.1\lib\net47\Unity.Abstractions.dll</HintPath>
+    <Reference Include="Unity.Abstractions, Version=5.11.5.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.5.11.6\lib\net47\Unity.Abstractions.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.Container, Version=5.11.1.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
-      <HintPath>..\packages\Unity.Container.5.11.1\lib\net47\Unity.Container.dll</HintPath>
+    <Reference Include="Unity.Container, Version=5.11.7.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.5.11.6\lib\net47\Unity.Container.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
@@ -146,6 +146,22 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\ScienceAnsMaths.WindowsServices\ScienceAndMaths.Application\ScienceAndMaths.Application.csproj">
+      <Project>{D6154186-D621-4D44-853A-173886DBA0D2}</Project>
+      <Name>ScienceAndMaths.Application</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\ScienceAnsMaths.WindowsServices\ScienceAndMaths.Configuration\ScienceAndMaths.Configuration.csproj">
+      <Project>{C3210660-EB04-4688-933D-A19A0DC18C1B}</Project>
+      <Name>ScienceAndMaths.Configuration</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\ScienceAnsMaths.WindowsServices\ScienceAndMaths.Core\ScienceAndMaths.Core.csproj">
+      <Project>{233E869A-0F43-4E77-8DB7-3773EC7C83CE}</Project>
+      <Name>ScienceAndMaths.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\ScienceAnsMaths.WindowsServices\ScienceAndMaths.Domain\ScienceAndMaths.Domain.csproj">
+      <Project>{9DF6D77C-6ED1-4B3A-8639-4BFDEA83A579}</Project>
+      <Name>ScienceAndMaths.Domain</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\ScienceAnsMaths.WindowsServices\ScienceAndMaths.ServiceAgents\ScienceAndMaths.ServiceAgents.csproj">
       <Project>{AD291586-8CA9-4FFD-A607-AC694908A22B}</Project>
       <Name>ScienceAndMaths.ServiceAgents</Name>
