New changes in interfaces

--- a/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/ScienceAndMaths.Client.Modules.csproj
+++ b/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Modules/ScienceAndMaths.Client.Modules.csproj
@@ -106,13 +106,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\ScienceAnsMaths.WindowsServices\ScienceAndMaths.Hydraulics\ScienceAndMaths.Hydraulics.csproj">
-      <Project>{B14FF188-99E1-48F2-90EC-8745E42412A4}</Project>
-      <Name>ScienceAndMaths.Hydraulics</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\ScienceAnsMaths.WindowsServices\ScienceAndMaths.ServiceAgents\ScienceAndMaths.ServiceAgents.csproj">
       <Project>{AD291586-8CA9-4FFD-A607-AC694908A22B}</Project>
       <Name>ScienceAndMaths.ServiceAgents</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\ScienceAnsMaths.WindowsServices\ScienceAndMaths.Shared\ScienceAndMaths.Shared.csproj">
+      <Project>{32271CAC-A2CE-4F84-8065-C356E66E2895}</Project>
+      <Name>ScienceAndMaths.Shared</Name>
     </ProjectReference>
     <ProjectReference Include="..\ScienceAndMaths.Client.Controls\ScienceAndMaths.Client.Controls.csproj">
       <Project>{18B5998D-433E-4CDB-A328-240A2A9D2BED}</Project>
@@ -129,10 +129,6 @@
     <ProjectReference Include="..\ScienceAndMaths.Domain\ScienceAndMaths.Domain.csproj">
       <Project>{0DD9D973-62F7-4ECB-9AC5-C3A8AA7BD031}</Project>
       <Name>ScienceAndMaths.Domain</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ScienceAndMaths.Shared\ScienceAndMaths.Shared.csproj">
-      <Project>{3CC21C0B-2715-42A5-9773-14836DFBB0B7}</Project>
-      <Name>ScienceAndMaths.Shared</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
