Simulation execution done

--- a/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Shared/ScienceAndMaths.Client.Shared.csproj
+++ b/products/ScienceAndMaths.Client/ScienceAndMaths.Client.Shared/ScienceAndMaths.Client.Shared.csproj
@@ -134,5 +134,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\play_icon.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
