--- a/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Application/ScienceAndMaths.Application.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Application/ScienceAndMaths.Application.csproj
@@ -56,6 +56,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ScienceAndMaths.Common\ScienceAndMaths.Common.csproj">
+      <Project>{1389BA52-0D48-4B0D-A907-A229FF679732}</Project>
+      <Name>ScienceAndMaths.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ScienceAndMaths.Domain\ScienceAndMaths.Domain.csproj">
       <Project>{9DF6D77C-6ED1-4B3A-8639-4BFDEA83A579}</Project>
       <Name>ScienceAndMaths.Domain</Name>
