--- a/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Common/ScienceAndMaths.Common.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Common/ScienceAndMaths.Common.csproj
@@ -4,15 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9DF6D77C-6ED1-4B3A-8639-4BFDEA83A579}</ProjectGuid>
+    <ProjectGuid>{1389BA52-0D48-4B0D-A907-A229FF679732}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ScienceAndMaths.Domain</RootNamespace>
-    <AssemblyName>ScienceAndMaths.Domain</AssemblyName>
+    <RootNamespace>ScienceAndMaths.Common</RootNamespace>
+    <AssemblyName>ScienceAndMaths.Common</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -42,22 +41,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ActionCompletedEventArgs.cs" />
-    <Compile Include="ICanalConfigurationLoader.cs" />
-    <Compile Include="ICanalFlowService.cs" />
-    <Compile Include="ICanalManager.cs" />
-    <Compile Include="IConfigurationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SequenceTaskScheduler.cs" />
+    <Compile Include="TaskExtension\TaskExtensionMethods.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ScienceAndMaths.Hydraulics\ScienceAndMaths.Hydraulics.csproj">
-      <Project>{B14FF188-99E1-48F2-90EC-8745E42412A4}</Project>
-      <Name>ScienceAndMaths.Hydraulics</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ScienceAndMaths.Shared\ScienceAndMaths.Shared.csproj">
-      <Project>{32271CAC-A2CE-4F84-8065-C356E66E2895}</Project>
-      <Name>ScienceAndMaths.Shared</Name>
+    <ProjectReference Include="..\ScienceAndMaths.Domain\ScienceAndMaths.Domain.csproj">
+      <Project>{9DF6D77C-6ED1-4B3A-8639-4BFDEA83A579}</Project>
+      <Name>ScienceAndMaths.Domain</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
