--- a/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Shared/ScienceAndMaths.Shared.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Shared/ScienceAndMaths.Shared.csproj
@@ -42,14 +42,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CanalData.cs" />
+    <Compile Include="Canals\CanalGeometryData.cs" />
     <Compile Include="Canals\CanalPointResult.cs" />
     <Compile Include="Canals\CanalSimulationResult.cs" />
     <Compile Include="Canals\ICanal.cs" />
+    <Compile Include="Canals\ICanalStretch.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Canals\ICanalSection.cs" />
     <Compile Include="Canals\ICanalEdge.cs" />
     <Compile Include="Canals\ICanalSectionModel.cs" />
-    <Compile Include="Canals\ICanalStretch.cs" />
+    <Compile Include="Canals\ICanalStretchModel.cs" />
     <Compile Include="INode.cs" />
     <Compile Include="IInterpolationElement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
