--- a/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Shared/ScienceAndMaths.Shared.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Shared/ScienceAndMaths.Shared.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Canals\CanalGeometryData.cs" />
     <Compile Include="Canals\CanalPointResult.cs" />
     <Compile Include="Canals\CanalSimulationResult.cs" />
+    <Compile Include="Canals\CanalStretchResult.cs" />
     <Compile Include="Canals\ICanal.cs" />
     <Compile Include="Canals\ICanalStretch.cs" />
     <Compile Include="Constants.cs" />
