--- a/products/ScienceAnsMaths.WindowsServices/Test.U/ScienceAndMaths.Mathematics.Test/ScienceAndMaths.Mathematics.Test.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/Test.U/ScienceAndMaths.Mathematics.Test/ScienceAndMaths.Mathematics.Test.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="FiniteElementMethodTest.cs" />
     <Compile Include="MatrixOperationsTest.cs" />
+    <Compile Include="NewtonRaphsonTest.cs" />
     <Compile Include="RungeKuttaTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
