--- a/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Hydraulics/ScienceAndMaths.Hydraulics.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Hydraulics/ScienceAndMaths.Hydraulics.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Canals\AnalysisOptions.cs" />
     <Compile Include="Canals\Canal.cs" />
     <Compile Include="Canals\CanalEdge.cs" />
     <Compile Include="Canals\CanalStretch.cs" />
