Finally simulating canals like it should be

--- a/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Mathematics/ScienceAndMaths.Mathematics.csproj
+++ b/products/ScienceAnsMaths.WindowsServices/ScienceAndMaths.Mathematics/ScienceAndMaths.Mathematics.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BisectionMethod.cs" />
     <Compile Include="FEM\BaseInterpolationElement.cs" />
     <Compile Include="FEM\FiniteElementMethodModel.cs" />
     <Compile Include="FEM\LinearElement.cs" />
